--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 					<img src="image/header-logo.png" id="logo">
 				</div>
 				<div class="col6 last">
-					<nav>
-						<a href="#">LIFESTYLE</a>
-						<a href="#">FLOWERS</a>
-						<a href="#">FASHION</a>
-						<a href="#">NEWS</a>
-						<a href="#">FEATURES</a>
+					<navn class="fa-arrow-left">
+						<a href="#" class="fa-inverse espacio-barra"><em>LIFESTYE</em></a>
+						<a href="#" class="fa-inverse espacio-barra"><em>FLOWERS</em></a>
+						<a href="#" class="fa-inverse espacio-barra"><em>FASHION</em></a>
+						<a href="#" class="fa-inverse espacio-barra"><em>NEWS</em></a>
+						<a href="#" class="fa-inverse espacio-barra"><em>FEATURES</em></a>
 					</nav>
 				</div>
 			</div>
