--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 					<img src="image/header-logo.png" id="logo">
 				</div>
 				<div class="col6 last">
-					<nav>
-						<a href="#">LIFESTYLE</a>
-						<a href="#">FLOWERS</a>
-						<a href="#">FASHION</a>
-						<a href="#">NEWS</a>
-						<a href="#">FEATURES</a>
+					<nav class="pull-right">
+						<a href="#" class="text-decoration">LIFESTYLE</a>
+						<a href="#" class="text-decoration">FLOWERS</a>
+						<a href="#" class="text-decoration">FASHION</a>
+						<a href="#" class="text-decoration">NEWS</a>
+						<a href="#" class="text-decoration">FEATURES</a>
 					</nav>
 				</div>
 			</div>
@@ -107,16 +107,16 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur cum eaque asperiores aspernatur quos ad? Accusamus quaerat ea vel tenetur, enim veniam a, quod ullam nihil eligendi fugiat perferendis reiciendis?</p>
 						<div>
 						<a href="#">
-						<i class="ico fa fa-facebook-square"></i>
+						<i class="ico fa fa-facebook-square fa-inverse"></i>
 						</a>
 						<a href="#">
-						<i class="ico fa fa-camera-retro"></i>
+						<i class="ico fa fa-camera-retro fa-inverse"></i>
 						</a>
 						<a href="#">
-						<i class="ico fa fa-twitter-square"></i>
+						<i class="ico fa fa-twitter-square fa-inverse"></i>
 						</a>
 						<a href="#">
-						<i class="ico fa fa-youtube-square"></i>
+						<i class="ico fa fa-youtube-square fa-inverse"></i>
 						</a>
 						</div>
 					</div>
@@ -125,7 +125,9 @@
 		</div>	
 	</section>
 	<footer>
+		<div class="onerow">
 		<p class="bg-pie">All Rights Reserved &#169 nK</p>
+		</div>
 	</footer>	
 </body>
 </html>
